# PxollyAPI

./: .gitignore  README.md  example.py  pyproject.toml
pxolly_api/: api.py  enums.py  exceptions.py
pxolly_api/methods/: __init__.py  _base.py  account.py  callback.py  chats.py  database.py  users.py  utils.py
pxolly_api/models/: __init__.py  _base.py  account.py  callback.py  chats.py  database.py  users.py  utils.py
tests/: fixtures.py  test_errors.py  test_methods.py
