[project]
name = "pxollyapi"
version = "0.1.0"
description = "Клиент для взаимодействия с API чат менеджера Pxolly"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "niquests>=3.15.2",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest]
testpaths = ["tests"]
